--- a/notebook/Nlp_Pipeline_ModelBuilding.ipynb
+++ b/notebook/Nlp_Pipeline_ModelBuilding.ipynb
@@ -46,39 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c6cc2412-b51c-4e8c-8b2a-53ccc2c43151",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\faisa\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt_tab to\n",
-      "[nltk_data]     C:\\Users\\faisa\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt_tab is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\faisa\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     C:\\Users\\faisa\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Download essential NLTK resources (run once, comment out after first run)\n",
     "nltk.download('punkt')       # sentence + word tokenizer models\n",
@@ -257,40 +228,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "12186db1-6e55-42d2-81bf-ebcddf570d98",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        label                                               text sentiment\n",
-      "0  __label__2  Stuning even for the non-gamer: This sound tra...  positive\n",
-      "1  __label__2  The best soundtrack ever to anything.: I'm rea...  positive\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(train_df[train_df['label'] == '__label__2'].head(2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c13f8ea8-744e-4a66-a2fc-df10df33d8b5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "         label                                               text sentiment\n",
-      "6   __label__1  Incorrect Disc: I love the style of this, but ...  negative\n",
-      "10  __label__2  Great book for travelling Europe: I currently ...  positive\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(test_df[train_df['label'] == '__label__1'].head(2))"
    ]
@@ -317,47 +258,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "a416bdf7-0e0d-41df-85c9-1e5afeb2bcf4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Missing values in training data:\n",
-      "label        0\n",
-      "text         0\n",
-      "sentiment    0\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"\\nMissing values in training data:\")\n",
-    "print(train_df.isnull().sum())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "6fe337d5-4cc2-4c5e-8763-fc0940e9669c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Missing values in test data:\n",
-      "label        0\n",
-      "text         0\n",
-      "sentiment    0\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"\\nMissing values in test data:\")\n",
     "print(test_df.isnull().sum())"
@@ -383,7 +287,6 @@
     }
    ],
    "source": [
-    "# Sentiment distribution in training data\n",
     "print(\"\\nSentiment distribution in training data:\")\n",
     "print(train_df['sentiment'].value_counts())"
    ]
@@ -406,8 +309,6 @@
     }
    ],
    "source": [
-    "import matplotlib.ticker as mticker\n",
-    "\n",
     "plt.figure(figsize=(12, 6))\n",
     "ax = sns.countplot(\n",
     "    x='sentiment',\n",
@@ -499,7 +400,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Preprocessing with nltk\n",
     "stop_words = set(stopwords.words('english'))\n",
     "lemmatizer = WordNetLemmatizer()\n",
     "HTML_RE = re.compile(r'<.*?>')\n",
@@ -805,24 +705,6 @@
    "metadata": {},
    "source": [
     "<h3><em>Ready for ML</em></h3>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "e0e17624-a706-4881-abc4-801298d40710",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(train_df['sentiment'].isnull().sum())"
    ]
   },
   {
@@ -1422,7 +1304,6 @@
     }
    ],
    "source": [
-    "# Model evaluation \n",
     "accuracy = accuracy_score(y_test, y_predd)\n",
     "print(f\"Accuracy: {accuracy * 100:.2f}%\")\n",
     "\n",
@@ -1508,30 +1389,19 @@
     "user_review = input(\"Enter your review: \")\n",
     "\n",
     "tokens = preprocess_text(user_review)\n",
-    "\n",
-    "# Convert tokens to weighted document vector\n",
     "vector = document_vector_weighted(tokens, w2v_model, word2weight).reshape(1, -1)\n",
     "\n",
-    "# Predict sentiment\n",
     "prediction = lr_model.predict(vector)\n",
     "\n",
     "print(\"Positive\" if prediction[0] == 1 else \"Negative\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b3034a4-ad81-4881-b194-8e312b774246",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "b48c3c30-140d-4733-81da-eb090cde4b3a",
    "metadata": {},
    "source": [
-    "<h3><em>🗑️ Garbage Collection Note</em></h3>\n",
+    "<h3><em>Garbage Collection Note</em></h3>\n",
     "\n",
     "Python automatically frees memory for objects that are no longer referenced,  \n",
     "but with **very large datasets** (millions of rows) or **big embeddings**,  \n",
@@ -1544,13 +1414,49 @@
     "   e.g., Word2Vec training or stacking large NumPy arrays.  \n",
     "3. Especially useful on RAM-constrained machines (like an **8 GB laptop**).\n",
     "\n",
-    "💡 **Tip:** Call `gc.collect()` after major intermediate steps to keep memory usage low."
+    "**Tip:** Call `gc.collect()` after major intermediate steps to keep memory usage low."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a919239d-694f-4e49-847b-6f0f5865ced0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Notebook successfully converted to HTML: NLP_Pipeline_ModelBuilding.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nbformat\n",
+    "from nbconvert import HTMLExporter\n",
+    "\n",
+    "with open(\"notebook.ipynb\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    nb = nbformat.read(f, as_version=4)\n",
+    "\n",
+    "# Create an HTML exporter\n",
+    "html_exporter = HTMLExporter()\n",
+    "html_exporter.template_name = \"classic\"  # or \"lab\", \"reveal\", etc.\n",
+    "\n",
+    "# Convert the notebook to HTML\n",
+    "body, resources = html_exporter.from_notebook_node(nb)\n",
+    "\n",
+    "# Save the HTML output\n",
+    "output_file = \"NLP_Pipeline_ModelBuilding.html\"\n",
+    "with open(output_file, \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(body)\n",
+    "\n",
+    "print(f\"Notebook successfully converted to HTML: {output_file}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf608c22-bd53-43b8-ac6e-0f67db3e4c57",
+   "id": "bf147036-d6c1-49a8-b806-00690e6b7353",
    "metadata": {},
    "outputs": [],
    "source": []
