generate .html file

--- a/notebook/workbook.ipynb
+++ b/notebook/workbook.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9b803657-54e9-40a6-8544-2dfb0e6267aa",
+   "metadata": {},
+   "source": [
+    "<div align=\"center\">\n",
+    "      <h3><em>Workflow of Sentiment Anlayzer</em></h3>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb2a9d20-0561-4420-b786-33bbe9ce5a63",
+   "metadata": {},
+   "source": [
+    "`Below is the end-to-end workflow that shows how to implement an NLP pipeline with FastText data and how to build an Machine learning model to predict sentiments.`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "bf2264d5-b6d3-447c-a0c8-d96b153ee819",
@@ -1418,48 +1436,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "a919239d-694f-4e49-847b-6f0f5865ced0",
+   "cell_type": "markdown",
+   "id": "68b0853f-0d48-422c-9686-060cc8f9d60e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Notebook successfully converted to HTML: NLP_Pipeline_ModelBuilding.html\n"
-     ]
-    }
-   ],
    "source": [
-    "import nbformat\n",
-    "from nbconvert import HTMLExporter\n",
+    "<center>\n",
     "\n",
-    "with open(\"notebook.ipynb\", \"r\", encoding=\"utf-8\") as f:\n",
-    "    nb = nbformat.read(f, as_version=4)\n",
+    "## <u>Connected with Me</u>\n",
     "\n",
-    "# Create an HTML exporter\n",
-    "html_exporter = HTMLExporter()\n",
-    "html_exporter.template_name = \"classic\"  # or \"lab\", \"reveal\", etc.\n",
-    "\n",
-    "# Convert the notebook to HTML\n",
-    "body, resources = html_exporter.from_notebook_node(nb)\n",
-    "\n",
-    "# Save the HTML output\n",
-    "output_file = \"NLP_Pipeline_ModelBuilding.html\"\n",
-    "with open(output_file, \"w\", encoding=\"utf-8\") as f:\n",
-    "    f.write(body)\n",
-    "\n",
-    "print(f\"Notebook successfully converted to HTML: {output_file}\")"
+    "<div style=\"font-family: 'Times New Roman', Times, serif; font-size: 16px; line-height: 2; text-align: center;\">\n",
+    "    <a href=\"mailto:thisside.faisalkhan@example.com\">Email Me</a><br>\n",
+    "    <a href=\"https://www.linkedin.com/in/faisal-khan-332b882bb/\">LinkedIn</a><br>\n",
+    "    <a href=\"https://github.com/Faisal-khann\">GitHub</a>\n",
+    "</div>\n",
+    "<br>\n",
+    "<div style=\"font-family: 'Times New Roman', Times, serif; font-size: 16px; padding: 12px;\">\n",
+    "    Made with <span style=\"color: #e25555;\">❤️</span> by <strong>Faisal Khan</strong><br>\n",
+    "    <span style=\"color: gray; font-size: 13px;\">Powered by Jupyter Notebook</span>\n",
+    "</div>\n",
+    "</center>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf147036-d6c1-49a8-b806-00690e6b7353",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
